Background image behavior

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,21 +17,6 @@
   }
 }
 
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw; 
-  height: 100vw; 
-  background-color: #fff;
-  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQ4MCIgaGVpZ2h0PSI2NTAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICAgIDxwYXRoIGQ9Ik0gNzUyIDY2MiBjIC0xNTQgMjUzIC00NzUgMTQ0IC02NjcgLTE3NSBDIC02NSAyMDAgLTYgLTQ5IDQzMSAzMCBxIDY3MyAxMzAgMzI3IDY0OSB6IiBmaWxsPSIjZmJlZWVhIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=);
-  background-size: cover;
-  background-position-x: 10vw;
-  /* background-position-y: -10vh; */
-  z-index: -1;
-}
-
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #222;
@@ -39,7 +24,11 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-size: var(--font-md);
-
+  background-color: #fff;
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQ4MCIgaGVpZ2h0PSI2NTAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICAgIDxwYXRoIGQ9Ik0gNzUyIDY2MiBjIC0xNTQgMjUzIC00NzUgMTQ0IC02NjcgLTE3NSBDIC02NSAyMDAgLTYgLTQ5IDQzMSAzMCBxIDY3MyAxMzAgMzI3IDY0OSB6IiBmaWxsPSIjZmJlZWVhIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=);
+  background-size: auto;
+  background-position-x: 20vw;
+  background-position-y: -10vh;
   background-repeat: no-repeat;
   line-height: 1.4;
   background-attachment: fixed;
