--- a/assets/style.css
+++ b/assets/style.css
@@ -24,12 +24,12 @@ body {
   min-height: 100vh;
   flex-direction: column;
   font-size: var(--font-md);
-  background-color: #fff;
+  /* background-color: #fff;
   background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQ4MCIgaGVpZ2h0PSI2NTAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICAgIDxwYXRoIGQ9Ik0gNzUyIDY2MiBjIC0xNTQgMjUzIC00NzUgMTQ0IC02NjcgLTE3NSBDIC02NSAyMDAgLTYgLTQ5IDQzMSAzMCBxIDY3MyAxMzAgMzI3IDY0OSB6IiBmaWxsPSIjZmJlZWVhIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=);
   background-size: cover;
   background-position-x: 20vw;
   background-position-y: -10vh;
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; */
   line-height: 1.4;
   background-attachment: fixed;
 }
