Background only for desktop

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,17 +21,23 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   color: #222;
   display: flex;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   flex-direction: column;
   font-size: var(--font-md);
-  /* background-color: #fff;
-  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQ4MCIgaGVpZ2h0PSI2NTAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICAgIDxwYXRoIGQ9Ik0gNzUyIDY2MiBjIC0xNTQgMjUzIC00NzUgMTQ0IC02NjcgLTE3NSBDIC02NSAyMDAgLTYgLTQ5IDQzMSAzMCBxIDY3MyAxMzAgMzI3IDY0OSB6IiBmaWxsPSIjZmJlZWVhIiBmaWxsLXJ1bGU9ImV2ZW5vZGQiLz48L3N2Zz4=);
-  background-size: cover;
-  background-position-x: 20vw;
-  background-position-y: -10vh;
-  background-repeat: no-repeat; */
+  background-image: none;
   line-height: 1.4;
   background-attachment: fixed;
+}
+
+/* Media query for desktop screens */
+@media (min-width: 992px) {
+  body {
+  background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMTQ4MCIgaGVpZ2h0PSI2NTAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+ICAgIDxwYXRoIGQ9Ik0gODEzIDEyMjMgYyAtMzMxIDI0MyAtNDc0IDM1OSAtNjgwIC0zMDMgQyAtMjUgMjQ2IC0xMDMgMjQgNTkzIDM4IHEgMTMwNyAzMSA4NzQgODg3IHoiIGZpbGw9IiNmYmVlZWEiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==);
+  background-size: cover;
+  background-position-x: 20vw;
+  /* background-position-y: 0vw; */
+  background-repeat: no-repeat;
+  }
 }
 
 main {
